--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
-g3 Scripts/Update File/g3update.zip
 g3 Scripts/Content/Update File/g3update.zip
 g3 Scripts/device_status_output.txt
+g3 Scripts/CHECK_FILE.txt
